/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'eclipse'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {

    api 'org.slf4j:slf4j-api:2.0.6'
    api 'org.codehaus.plexus:plexus-utils:3.5.0'
    api 'jakarta.inject:jakarta.inject-api:2.0.1'
    api 'org.apache.commons:commons-lang3:3.12.0'
    api "org.codehaus.plexus:plexus-interpolation:1.28"
    api 'org.eclipse.sisu:org.eclipse.sisu.inject:0.3.5'
    api 'org.apache.httpcomponents:httpclient:4.5.13'
    api 'com.google.inject:guice:6.0.0'
    api 'org.slf4j:slf4j-api:2.0.6'
    
    testImplementation 'org.slf4j:slf4j-simple:2.0.16'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
    testImplementation 'org.assertj:assertj-core:3.27.1'
    testImplementation 'org.slf4j:slf4j-simple:2.0.16'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
    testImplementation 'org.assertj:assertj-core:3.27.1'
}

group = 'org.myjtools'
version = '1.1.1+WilderForge.1.0.0'
description = 'Maven Fetcher'
java.sourceCompatibility = JavaVersion.VERSION_1_8

java {
    withSourcesJar()
    withJavadocJar()
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

java {
    modularity.inferModulePath = false //fuck java modules
}

tasks.withType(Javadoc).configureEach {
    // Silence warnings
    options.addStringOption('Xdoclint:none', '-quiet')

    // Fail the build on Javadoc errors
    failOnError = true
}